@@ -1,16 +1,18 @@
 # custom IntelliJ IDEA VM options
 
--Xms1024m
--Xmx1536m
--XX:ReservedCodeCacheSize=512m
--XX:+UseConcMarkSweepGC
--XX:ConcGCThreads=4
--XX:SoftRefLRUPolicyMSPerMB=50
+-server
 -ea
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
+-Xms1024m
+-Xmx2048m
+-XX:ReservedCodeCacheSize=256m
+-XX:SoftRefLRUPolicyMSPerMB=50
+-XX:ConcGCThreads=4
+-XX:+UseG1GC
+-XX:-UseParNewGC
+-XX:-UseConcMarkSweepGC
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:-OmitStackTraceInFastThrow
-
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
 -Duser.name=shadowyy
 -Dfile.encoding=utf-8
